# tap-sumologic-widen

./: README.md  meltano.yml  mypy.ini  pyproject.toml  tox.ini
.github/workflows/: ci_workflow.yml
tap_sumologic/: client.py  streams.py  sumologic_sdk.py  tap.py
tap_sumologic/tests/: __init__.py  test_core.py
