[tool.poetry]
name = "tap-sumologic"
version = "0.0.4"
description = "`tap-sumologic` is a Singer tap for sumologic, built with the Meltano SDK for Singer Taps."
authors = ["Josh Lloyd"]
keywords = [
    "ELT",
    "sumologic",
]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = "<3.12,>=3.9.1"
requests = "^2.25.1"
singer-sdk = "^0.34.1"
genson = "^1.2.2"
requests-mock = "^1.9.3"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
tox = "^3.24.4"
flake8 = "^3.9.2"
black = "^22.3.0"
pydocstyle = "^6.1.1"
mypy = "^1.0.0"
types-requests = "^2.26.1"
isort = "^5.10.1"

[tool.isort]
profile = "black"
multi_line_output = 3 # Vertical Hanging Indent
src_paths = "tap_sumologic"

[build-system]
requires = ["poetry-core>=1.8.4"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
# CLI declaration
tap-sumologic = 'tap_sumologic.tap:TapSumoLogic.cli'
